--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -14,7 +14,6 @@ configure_file(TutorialConfig.h.in TutorialConfig.h)
 if(USE_MYMATH)
 	add_subdirectory(MathFunctions)
 	list(APPEND EXTRA_LIBS MathFunctions)
-	list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/MathFunctions")
 endif()
 
 add_executable(main tutorial.cxx)
@@ -23,4 +22,4 @@ target_link_libraries(main PUBLIC ${EXTRA_LIBS})
 
 # The configured file will be written to the binary tree
 # add the binary path to the include search list
-target_include_directories(main PUBLIC "${PROJECT_BINARY_DIR}" ${EXTRA_INCLUDES})
+target_include_directories(main PUBLIC "${PROJECT_BINARY_DIR}") 
